--- a/app/src/main/res/layout/activity_image_pick.xml
+++ b/app/src/main/res/layout/activity_image_pick.xml
@@ -9,6 +9,10 @@
         android:layout_height="wrap_content"
         android:onClick="onClick"
         />
+    <TextView
+        android:id="@+id/lblResult"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
     <ImageView
         android:id="@+id/result"
         android:layout_width="match_parent"
